@@ -22,6 +22,8 @@
 13. Add a 'Locate In Library' action, to locate the selected play queue track
     in the library page.
 14. Fix crash when quiting Cantata whilst devices are being scanned.
+15. Disable JavaScript for webview, this removes the 'Show'/'Hide' buttons from
+    wikipedia pages.
 
 0.5.1
 -----
